--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BrainMagnet</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+    <title>BrainMagnet</title>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<p class="navbar-text pull-right">
+    <% if patient_signed_in? %>
+        Logged in as <strong><%= current_patient.email %></strong>.
+        <%= link_to 'Edit profile', edit_patient_registration_path, :class => 'navbar-link' %> |
+        <%= link_to "Logout", destroy_patient_session_path, method: :delete, :class => 'navbar-link' %>
+    <% else %>
+        <%= link_to "Sign up", new_patient_registration_path, :class => 'navbar-link' %> |
+        <%= link_to "Login", new_patient_session_path, :class => 'navbar-link' %>
+    <% end %>
 
-</body>
+    <% if notice %>
+        <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+        <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+    <%= yield %>
+    </body>
 </html>
