Placed login in navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= render 'layouts/navigation_menu' %>
 
     <div class="container">
-      <%= render 'layouts/loginform' %>
+      <%= render 'layouts/loginalert' %>
       <%= yield %>
     </div>
     </body>
