Login in navbar has icons and responsive alignment

--- a/app/views/layouts/_navigation_menu.erb
+++ b/app/views/layouts/_navigation_menu.erb
@@ -28,7 +28,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <%= render 'layouts/loginform' %>
+        <%= render 'layouts/login' %>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
