--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,14 +3,13 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+    <p><div class="input-group">
+  <span class="input-group-addon"><%= f.label :email %></span>
+  <%= f.email_field :email, class:"form-control" %>
+</div></p>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
+    <p><input type="submit" name="commit" value="Send me reset password instructions" class="btn btn-default"></p>
+
 <% end %>
 
 <%= render "devise/shared/links" %>
