--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,32 +3,31 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-    <div class="field">
-      <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true %>
-    </div>
+    <p><div class="field input-group">
+  <span class="input-group-addon"><%= f.label :name %></span>
+  <%= f.text_field :name, class:"form-control"%>
+</div></p>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
+    <p><div class="input-group">
+  <span class="input-group-addon"><%= f.label :email %></span>
+  <%= f.email_field :email, class:"form-control" %>
+</div></p>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <p><div class="input-group">
+  <span class="input-group-addon"><%= f.label :password %></span>
+  <%= f.password_field :password, class:"form-control",  autocomplete: "off", placeholder:"Leave blank if you don't want to change it" %>
+  <% if @validatable %>
+      <span class="input-group-addon"><%= @minimum_password_length %> characters minimum</span>
+  <% end %>
+</div></p>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <p><div class="input-group">
+  <span class="input-group-addon"><%= f.label :password_confirmation %></span>
+  <%= f.password_field :password_confirmation, class:"form-control", autocomplete: "off", placeholder:"Type your new password again. Just making sure." %>
+</div></p>
+
+    <p><input type="submit" name="commit" value="Sign up" class="btn btn-default"></p>
 <% end %>
 
 <%= render "devise/shared/links" %>
