--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -11,23 +11,24 @@
         </div>
     <% end %>
 
+    <% date = @entry.date[:date].to_date %>
+    <input type="text", name="entry[date]" id="entry[date]" value="<%= date %>">
+
+    <br /><br /><br />
+
     <div id="date-head">
-      <button id="prev-btn" type="button" class="btn btn-default">Prev</button>
-      <h3 id="the-date"><%= @date.strftime("%A %d") %></h3>
-      <button id="next-btn" type="button" class="btn btn-default">Next</button>
+      <a href="/entries/d/<%= date.prev_day %>"> <button id="prev-btn" type="button" class="btn btn-default">Prev </button></a>
+      <h4 id="the-date"><%= date.strftime("%A %d") %></h4>
+      <a href="/entries/d/<%= date.next_day %>"><button id="next-btn" type="button" class="btn btn-default">Next</button></a>
     </div>
 
-
-    <div class="form-group">
-      <%= f.label :date %><br>
-      <%= f.date_select :date %>
-    </div>
+    <br />
     <div class="form-group">
       <%= f.label :mood %><br>
       <%= f.number_field :mood %>
     </div>
     <div class="form-group">
-      <%= f.label :sleep %>
+      <%= f.label :sleep %><br>
       <%= f.number_field :sleep %>
     </div>
     <div class="actions">
