--- a/app/views/layouts/_admin_lte_2_header.html.erb
+++ b/app/views/layouts/_admin_lte_2_header.html.erb
@@ -2,7 +2,7 @@
 <header class="main-header">
 
   <!-- Logo -->
-  <a href="/" class="logo"><b>Admin</b>LTE</a>
+  <a href="/" class="logo"><b>Brain</b>Magnet</a>
 
   <!-- Header Navbar -->
   <nav class="navbar navbar-static-top" role="navigation">
@@ -106,7 +106,7 @@
         <!-- User Account Menu -->
         <li class="dropdown user user-menu">
           <!-- Menu Toggle Button -->
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
             <!-- The user image in the navbar-->
             <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
             <!-- hidden-xs hides the username on small devices so only the image appears. -->
