--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,12 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Entries</h1>
+<section class="content-header">
+  <h1>
+    Entries
+    <small>Optional description</small>
+  </h1>
+  <ol class="breadcrumb">
+    <li><a href="#"><i class="fa fa-dashboard"></i> Level</a></li>
+    <li class="active">Here</li>
+  </ol>
+</section>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Date</th>
       <th>Mood</th>
+      <th>Sleep</th>
+      <th>Irritability</th>
+      <th>Anxiety</th>
+      <th>Psychotic</th>
+      <th>Notes</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +30,11 @@
       <tr>
         <td><%= entry.date %></td>
         <td><%= entry.mood %></td>
+        <td><%= entry.sleep %></td>
+        <td><%= entry.irritability %></td>
+        <td><%= entry.anxiety %></td>
+        <td><%= entry.psychotic %></td>
+        <td><%= entry.notes %></td>
         <td><%= link_to 'Show', entry %></td>
         <td><%= link_to 'Edit', edit_entry_path(entry) %></td>
         <td><%= link_to 'Destroy', entry, method: :delete, data: { confirm: 'Are you sure?' } %></td>
