--- a/app/views/layouts/admin_lte_2.html.erb
+++ b/app/views/layouts/admin_lte_2.html.erb
@@ -22,6 +22,7 @@
     <%= render partial: 'layouts/admin_lte_2_header' %>
 
     <%= render partial: 'layouts/admin_lte_2_sidebar' %>
+    <%= render partial: 'layouts/admin_lte_2_right_sidebar' %>
 
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
@@ -43,6 +44,7 @@
       </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
 
+
     <!-- Main Footer -->
     <footer class="main-footer">
       <!-- To the right -->
@@ -50,8 +52,9 @@
         Anything you want
       </div>
       <!-- Default to the left -->
-      <strong>Copyright &copy; 2015 <a href="#">Company</a>.</strong> All rights reserved.
+      <strong>Copyright &copy; 2015 <a href="#">BrainMagnet</a>.</strong> All rights reserved.
     </footer>
+
 
   </div><!-- ./wrapper -->
 
